# agentlinters

./: .gitignore  .oxfmtrc.json  PROJECT.md  README.md  agentlinters.sh  oxlint-typescript.json  pack.sh
_cli/: README.md
assets/: environments.json
assets/javascript/: .oxlintrc.json  .oxlintrc.react.json  .oxlintrc.vue.json  eslint.config.js  javascript-linters.md
assets/js/: .oxlintrc.json  install.sh
assets/php/: install.sh  php-linters.md  phpstan.neon
assets/python/: .pylintrc  README.md  install.sh  (+1 more)
cli/: .gitignore  Cargo.toml  agentlinters.spec  build.sh  compile.sh  main.py  pyproject.toml
cli/scripts/: install.javascript.md  install.javascript.sh  install.php.md  install.python.md  install.python.sh  install.react.md  install.react.sh  install.ruby.md  install.rust.md  install.rust.sh  install.shell.md  install.typescript.md  install.typescript.sh  install.vue.md
cli/src/: app.rs  args.rs  assets.rs  install.rs  lib.rs  main.rs  summary.rs  utils.rs
cli/src/embeds/: install.javascript.md  install.python.md  install.rust.md  install.shell.md
cli/src/install/: javascript.rs  mod.rs  php.rs  python.rs  react.rs  ruby.rs  rust.rs  shared.rs  shell.rs  typescript.rs  vue.rs
javascript/: .prettierignore  .prettierrc  README.md
oxfmt/: .oxfmtrc.json
oxlint/: oxlintrc.json
php/: README.md  phpstan.neon  pint.json  rector.php  setup.sh
prettier/: README.md
python/: README.md  fallback_checker.py  ruff.toml  setup.sh
ruby/: README.md  setup.sh
rust/: Cargo.toml  README.md  setup.sh
shell/: .shellcheckrc  README.md  setup.sh
(+80 files in other folders)
